   daylight WB (excluding some very specific cases like Canon D30). 
   This is how LibRaw 0.19 (and older) works.
   If not set: LibRaw::dcraw_process() will fallback to auto-WB if
   camera-WB is requested, but no acceptable white balance was parsed from metadata.

 * API-datastruct: clarified behavior with use_camera_wb=1 setting.

2020-06-29 Alex Tutubalin <lexa@lexa.ru>
 * LibRaw 0.20-RC1
 * RC1
  - fixed typo in normalize_model.cpp 
  - speedup: ppg interpolate: const loop invariant 
  - Thumbnail size range check (CVE-2020-15503)
    Thanks to Jennifer Gehrke of Recurity Labs GmbH for problem report.
  - fixed possible overflows in canon and sigma makernotes parsers
  - WB preset indexes tables converted to self-bounds-checking arrays

2020-06-17 Alex Tutubalin <lexa@lexa.ru>
 * LibRaw 0.20-Beta3
 * Beta2 fixes:
   -Fixed several UBs found by OSS Fuzz
   -Fixed several problems found by other fuzzers.
   -Overall code cleanup: debug statements removed
   -Fixed typo in longitude (member of parsed GPS structure), update required for code that uses it. 

2020-05-29 Alex Tutubalin <lexa@lexa.ru>
 * LibRaw 0.20-Beta2
 * Beta2 fixes:
   - fixed possible buffer overrun in crx (cr3) decoder
   - fixed memory leak in crx decoder (if compiled with LIBRAW_NO_CR3_MEMPOOL)
   - fixed possible overrun in Sony SRF and SR2 metadata parsers
   - Minolta DG-5/7D supported again
   - gcc 10/11 -Wall warnings eliminated
   - Google changes cherry-picked (thanks to Jamie Pinheiro)
   - vcxproj files regenerated (update to Visual Studio 2019)

2020-05-07 Alex Tutubalin <lexa@lexa.ru>

 * LibRaw 0.20-Beta1

== Camera Format support ==
  Canon CR3
  GoPro (via GPR SDK)
  Panasonic 14-bit
  Fujifilm compressed/16bit
  Rapsberry Pi RAW+JPEG format (if USE_6BY9RPI defined)
  Foveon X3F support changed: it is supported only if USE_X3FTOOLS defined 
  at build (see below for 'Imported code policy changed')

== Camera support (+59, 1131 total) ==