@@ -15,6 +15,8 @@
 
  * API-datastruct: clarified behavior with use_camera_wb=1 setting.
 
+ * identify(): recovered fsize and flen difference
+
 2020-06-29 Alex Tutubalin <lexa@lexa.ru>
  * LibRaw 0.20-RC1
  * RC1
